--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                 </div><br>
                 
                 <div class="input-group mb-3">
-                    <span class="input-group-text" id="balls-addon">Balls Bowled</span>
+                    <span class="input-group-text" id="balls-addon">Balls </span>
                     <input type="text" class="form-control" id="balls" name="balls" aria-describedby="balls-addon">
                 </div><br>
                 
