added batsmen and bowler section

--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -20,7 +20,40 @@
 <div class="container mt-5">
     <h1 class="mb-4 text-center">Cricket Scorer</h1>
 
+    <!-- Batsmen Section -->
     <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Batsman 1</h5>
+                    <p class="card-text" id="batsman1-runs">0 (0 balls)</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Batsman 2</h5>
+                    <p class="card-text" id="batsman2-runs">0 (0 balls)</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bowler Section -->
+    <div class="row mt-4">
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Bowler</h5>
+                    <p class="card-text" id="bowler-details">-</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Scoreboard Section -->
+    <div class="row mt-4">
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
@@ -47,6 +80,7 @@
         </div>
     </div>
 
+    <!-- Buttons Section -->
     <div class="row mt-4">
         <div class="col-md-6">
             <button class="btn btn-primary btn-block mb-3" onclick="addRuns(1)">1 Run</button>
@@ -63,4 +97,5 @@
     </div>
 </div>
 {% endblock %}
+
 
