added stats section where CRR, RRR and type of inning is being played as well as the strike rate of the batsmen

--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -27,6 +27,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Batsman 1</h5>
                     <p class="card-text" id="batsman1-runs">0 (0 balls)</p>
+                    <p class="card-text" id="batsman1-strike-rate">Strike Rate: -</p>
                 </div>
             </div>
         </div>
@@ -35,6 +36,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Batsman 2</h5>
                     <p class="card-text" id="batsman2-runs">0 (0 balls)</p>
+                    <p class="card-text" id="batsman2-strike-rate">Strike Rate: -</p>
                 </div>
             </div>
         </div>
@@ -75,6 +77,34 @@
                 <div class="card-body">
                     <h5 class="card-title">Overs Bowled</h5>
                     <p class="card-text" id="overs">0</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add Stats Section -->
+    <div class="row mt-4">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Current Run Rate</h5>
+                    <p class="card-text" id="current-run-rate">0.00</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Required Run Rate</h5>
+                    <p class="card-text" id="required-run-rate">0.00</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Inning</h5>
+                    <p class="card-text" id="inning">First</p>
                 </div>
             </div>
         </div>
