--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -109,6 +109,28 @@
             </div>
         </div>
     </div>
+    
+ <!-- Input Fields for Runs and Wickets -->
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="runsInput">Runs:</label>
+                <input type="number" class="form-control" id="runsInput" placeholder="Enter runs">
+            </div>
+            <div class="form-group">
+                <label for="wicketsInput">Wickets:</label>
+                <input type="number" class="form-control" id="wicketsInput" placeholder="Enter wickets">
+            </div>
+            <button class="btn btn-primary btn-block" onclick="updateScore()">Update Score</button>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="oversInput">Overs:</label>
+                <input type="number" class="form-control" id="oversInput" placeholder="Enter overs bowled">
+            </div>
+            <button class="btn btn-primary btn-block" onclick="updateOvers()">Update Overs</button>
+        </div>
+    </div>
 
     <!-- Buttons Section -->
     <div class="row mt-4">
