change buttons to outline color

--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -109,7 +109,7 @@
             </div>
         </div>
     </div>
-    
+
  <!-- Input Fields for Runs and Wickets -->
     <div class="row mt-4">
         <div class="col-md-6">
@@ -121,14 +121,14 @@
                 <label for="wicketsInput">Wickets:</label>
                 <input type="number" class="form-control" id="wicketsInput" placeholder="Enter wickets">
             </div>
-            <button class="btn btn-primary btn-block" onclick="updateScore()">Update Score</button>
+            <button class="btn btn-outline-info" onclick="updateScore()">Update Score</button>
         </div>
         <div class="col-md-6">
             <div class="form-group">
                 <label for="oversInput">Overs:</label>
                 <input type="number" class="form-control" id="oversInput" placeholder="Enter overs bowled">
             </div>
-            <button class="btn btn-primary btn-block" onclick="updateOvers()">Update Overs</button>
+            <button class="btn btn-outline-info" onclick="updateOvers()">Update Overs</button>
         </div>
     </div>
 
@@ -144,7 +144,7 @@
         </div>
         <div class="col-md-6">
             <button class="btn btn-danger btn-block mb-3" onclick="addWicket()">Wicket Taken</button>
-            <button class="btn btn-secondary btn-block mb-3" onclick="resetScore()">Reset</button>
+            <button class="btn btn-outline-secondary btn-block mb-3" onclick="resetScore()">Reset</button>
         </div>
     </div>
 </div>
