change to <a> element to trigger in page functionality

--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -107,12 +107,12 @@
 
             <form method="post" action="/add_runs">
                 <a type="button" name="runs" value="1" class="btn btn-primary btn-block">1 Run</a>
-                <button type="submit" name="runs" value="2" class="btn btn-primary btn-block">2 Run</button>
-                <button type="submit" name="runs" value="3" class="btn btn-primary btn-block">3 Run</button>
-                <button type="submit" name="runs" value="4" class="btn btn-primary btn-block">4 Run</button>
-                <button type="submit" name="runs" value="5" class="btn btn-primary btn-block">5 Run</button>
-                <button type="submit" name="runs" value="6" class="btn btn-primary btn-block">6 Run</button>
-                <button type="submit" name="runs" value="0" class="btn btn-primary btn-block">DOT Ball</button>
+                <a type="submit" name="runs" value="2" class="btn btn-primary btn-block">2 Run</a>
+                <a type="submit" name="runs" value="3" class="btn btn-primary btn-block">3 Run</a>
+                <a type="submit" name="runs" value="4" class="btn btn-primary btn-block">4 Run</a>
+                <a type="submit" name="runs" value="5" class="btn btn-primary btn-block">5 Run</a>
+                <a type="submit" name="runs" value="6" class="btn btn-primary btn-block">6 Run</a>
+                <a type="submit" name="runs" value="0" class="btn btn-primary btn-block">DOT Ball</a>
                 
             </form>
         </div>
