--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -39,8 +39,8 @@
 <div class="container mt-4">
     <h1 class="mb-4 text-center">Cricket Scorer</h1>
 
-   <!-- Batsmen Section -->
-   <div class="row">
+<!-- Batsmen Section -->
+<div class="row">
     <div class="col-md-6">
         <div class="card">
             <div class="card-body">
@@ -106,16 +106,17 @@
         <div class="col-md-4">
 
             <form method="post" action="/add_runs">
-                <a type="button" name="runs" value="1" class="btn btn-primary btn-block">1 Run</a>
-                <a type="submit" name="runs" value="2" class="btn btn-primary btn-block">2 Run</a>
-                <a type="submit" name="runs" value="3" class="btn btn-primary btn-block">3 Run</a>
-                <a type="submit" name="runs" value="4" class="btn btn-primary btn-block">4 Run</a>
-                <a type="submit" name="runs" value="5" class="btn btn-primary btn-block">5 Run</a>
-                <a type="submit" name="runs" value="6" class="btn btn-primary btn-block">6 Run</a>
-                <a type="submit" name="runs" value="0" class="btn btn-primary btn-block">DOT Ball</a>
-                
+                <button type="submit" name="runs" value="1" class="btn btn-primary btn-block">1 Run</button>
+                <button type="submit" name="runs" value="2" class="btn btn-primary btn-block">2 Run</button>
+                <button type="submit" name="runs" value="3" class="btn btn-primary btn-block">3 Run</button>
+                <button type="submit" name="runs" value="4" class="btn btn-primary btn-block">4 Run</button>
+                <button type="submit" name="runs" value="5" class="btn btn-primary btn-block">5 Run</button>
+                <button type="submit" name="runs" value="6" class="btn btn-primary btn-block">6 Run</button>
+                <button type="submit" name="runs" value="0" class="btn btn-primary btn-block">DOT Ball</button>
             </form>
         </div>
+    </div>
+</div>
         <div class="col-md-6">
             <form method="post" action="/add_wicket">
                 <button type="submit" name="wickets" value="1" class="btn btn-danger btn-block">Wicket Taken</button>
