add so that the bowler name can be added

--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -67,7 +67,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Bowler</h5>
-                    <p class="card-text" id="bowler-details">-</p>
+                    <p class="card-text" id="bowler-details">{{ bowler }}</p>
                 </div>
             </div>
         </div>
