--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -42,25 +42,24 @@
     <!-- Batsmen Section -->
     <div class="row">
         <div class="col-md-6">
-            <div class="card {% if current_batsman == batsman1["name"] %}border-primary shadow{% endif %}">
+            <div class="card {% if current_batsman == batsman1['name'] %}border-primary shadow{% endif %}">
                 <div class="card-body">
                     <h5 class="card-title">{{ batsman1.name }}</h5>
                     <p class="card-text" id="batsman1-runs">{{ batsman1.runs }} ({{ batsman1.balls }} balls)</p>
-                    <p class="card-text" id="batsman1-strike-rate">Strike Rate: -</p>
+                    <p class="card-text" id="batsman1-strike-rate">Strike Rate: {{ strike_rate_batsman1 }}</p>
                 </div>
             </div>
         </div>
         <div class="col-md-6">
-            <div class="card {% if current_batsman == batsman2["name"] %}border-primary shadow{% endif %}">
+            <div class="card {% if current_batsman == batsman2['name'] %}border-primary shadow{% endif %}">
                 <div class="card-body">
                     <h5 class="card-title">{{ batsman2.name }}</h5>
                     <p class="card-text" id="batsman2-runs">{{ batsman2.runs }} ({{ batsman2.balls }} balls)</p>
-                    <p class="card-text" id="batsman2-strike-rate">Strike Rate: -</p>
+                    <p class="card-text" id="batsman2-strike-rate">Strike Rate: {{ strike_rate_batsman2 }}</p>
                 </div>
             </div>
         </div>
     </div>
-
     <!-- Bowler Section -->
     <div class="row mt-4">
         <div class="col">
