--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -127,7 +127,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Current Run Rate</h5>
-                    <p class="card-text" id="current-run-rate">0.00</p>
+                    <p class="card-text" id="current-run-rate">{{ current_run_rate }}</p>
                 </div>
             </div>
         </div>
