fixed when wickets are over the inning display "end of inning"

--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -143,14 +143,10 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Inning</h5>
-                    <p class="card-text" id="inning">First</p>
+                    <p class="card-text" id="inning">{{ inning }}</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
 {% endblock %}
-
-
-
-
