added modal, still working in progress

--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -76,13 +76,9 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Select Next Bowler</h5>
-                <form method="post" action="/change_bowler">
-                    <div class="form-group">
-                        <select name="next_bowler" class="form-control">
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block">Change Bowler</button>
-                </form>
+                <button type="button" class="btn btn-primary btn-block" data-bs-toggle="modal" data-bs-target="#changeBowlerModal">
+                    Change Bowler
+                </button>
             </div>
         </div>
     </div>
@@ -165,4 +161,14 @@
         </div>
     </div>
 </div>
+
+<!-- Modal -->
+
+<div class="modal-body">
+    <h2 class="fs-5">Popover in a modal</h2>
+    <p>This <button class="btn btn-secondary" data-bs-toggle="popover" title="Popover title" data-bs-content="Popover body content is set in this attribute.">button</button> triggers a popover on click.</p>
+    <hr>
+    <h2 class="fs-5">Tooltips in a modal</h2>
+    <p><a href="#" data-bs-toggle="tooltip" title="Tooltip">This link</a> and <a href="#" data-bs-toggle="tooltip" title="Tooltip">that link</a> have tooltips on hover.</p>
+  </div>
 {% endblock %}
