--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -61,28 +61,8 @@
         </div>
     </div>
 
+
 <!-- Bowler Section -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
-  </button>
-<!-- Modal -->
-<div class="modal fade show" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" style="display: block;" aria-modal="true" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p>Woo-hoo, you're reading this text in a modal!</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
 <div class="row mt-4">
     <div class="col-md-6">
@@ -94,13 +74,32 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Select Next Bowler</h5>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Select Next Bowler
-                </button>                
+
+<!-- Button to launch modal for selecting next bowler -->
+<div class="col-md-6">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Select Next Bowler</h5>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#selectNextBowlerModal">
+                Select Next Bowler
+            </button>                
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="selectNextBowlerModal" tabindex="-1" aria-labelledby="selectNextBowlerModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="selectNextBowlerModalLabel">Select Next Bowler</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Content for selecting next bowler goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
