added group item to choose next bowler

--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -95,7 +95,29 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>Content for selecting next bowler goes here.</p>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                      <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="Bowler1">
+                      <label class="form-check-label" for="firstRadio">Bowler1</label>
+                    </li>
+                    <li class="list-group-item">
+                      <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="Bowler2">
+                      <label class="form-check-label" for="secondRadio">Bowler2</label>
+                    </li>
+                    <li class="list-group-item">
+                      <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="Bowler3">
+                      <label class="form-check-label" for="thirdRadio">Bowler 3</label>
+                    </li>
+                    <li class="list-group-item">
+                        <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="Bowler4">
+                        <label class="form-check-label" for="forthRadio">Bowler4</label>
+                    </li>
+                    <li class="list-group-item">
+                        <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="Bowler5">
+                        <label class="form-check-label" for="fithRadio">Bowler5</label>
+                      </li>
+                  </ul>
+                <p>Additional content for selecting next bowler can be added here if needed.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
