--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     {% block body %}{% endblock %}
-
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     {% block scripts %}{% endblock %}
     
 </body>
