added confirm button to page, to confirm the input of user when clicking a button

--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -185,6 +185,11 @@
         </form>
     </div>
 </div>
+<div class="col-md-10">
+    <form method="post" action="/next_ball">
+        <button type="submit" name="Next Ball" value="Continue" class="btn btn-info btn-block">Confirm Input</button>
+    </form>
+
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
