--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -189,6 +189,15 @@
     <form method="post" action="/next_ball">
         <button type="submit" name="Next Ball" value="Continue" class="btn btn-info btn-block">Confirm Input</button>
     </form>
+<!-- Undo Button -->
+<div class="row mt-4">
+    <div class="col-md-12 text-center">
+        <form method="post" action="/undo">
+            <button type="submit" class="btn btn-warning">Undo Last Action</button>
+        </form>
+    </div>
+</div>
+</div>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -199,11 +208,11 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+          Confirm No/Wide Ball
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary">Confirm</button>
         </div>
       </div>
     </div>
