--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -162,50 +162,38 @@
                     <p class="d-inline-flex gap-1">
                         <button type="submit" name="runs" value="1" class="btn" data-bs-toggle="button">1 Run</button>
                         <button type="submit" name="runs" value="2" class="btn" data-bs-toggle="button">2 Run</button>
-                        <button type="submit" name="runs" value="2" class="btn" data-bs-toggle="button">3 Run</button>
-                        <button type="submit" name="runs" value="2" class="btn" data-bs-toggle="button">4 Run</button>
-                        <button type="submit" name="runs" value="2" class="btn" data-bs-toggle="button">5 Run</button>
-                        <button type="submit" name="runs" value="2" class="btn" data-bs-toggle="button">6 Run</button>
-                        <button type="submit" name="runs" value="2" class="btn" data-bs-toggle="button">No Run</button>
-                        <button type="submit" name="runs" value="2" class="btn" data-bs-toggle="button">Wide Run</button>
-                        <button type="submit" name="runs" value="2" class="btn" data-bs-toggle="button">No Ball</button>
+                        <button type="submit" name="runs" value="3" class="btn" data-bs-toggle="button">3 Run</button>
+                        <button type="submit" name="runs" value="4" class="btn" data-bs-toggle="button">4 Run</button>
+                        <button type="submit" name="runs" value="5" class="btn" data-bs-toggle="button">5 Run</button>
+                        <button type="submit" name="runs" value="6" class="btn" data-bs-toggle="button">6 Run</button>
+                        <button type="submit" name="runs" value="0" class="btn" data-bs-toggle="button">No Run</button>
+                        <button type="submit" name="runs" value="1" class="btn" data-bs-toggle="button">Wide Ball</button>
+                        <button type="submit" name="runs" value="1" class="btn" data-bs-toggle="button">No Ball</button>
                     </p>
+                </form>
+            </div>
+        </div>
 
+        <form method="post" action="/next_ball">
+            <input type="hidden" name="wide" value="{{ request.form.get("wide", "False") }}">
+            <input type="hidden" name="no_ball" value="{{ request.form.get("no_ball", "False") }}">
+            <input type="hidden" name="four" value="{{ request.form.get("four", "False") }}">
+            <input type="hidden" name="six" value="{{ request.form.get("six", "False") }}">
+            <button type="submit" class="btn btn-outline-success">Confirm</button>
+        </form>
 
 <div class="col-md-10">
-    <form method="post" action="/next_ball">
-        <button type="submit" name="Next Ball" value="Continue" class="btn btn-info btn-block">Confirm Input</button>
+    <form method="post" action="/add_wicket">
+        <button type="submit" name="wickets" value="1" class="btn btn-outline-danger">Wicket Taken</button>
     </form>
+
 <!-- Undo Button -->
-<div class="row mt-4">
-    <div class="col-md-12 text-center">
+    <div class="row md-10">
         <form method="post" action="/undo">
-            <button type="submit" class="btn btn-warning">Undo Last Action</button>
+            <button type="button" name="Undo" value="Undo" class="btn btn-outline-warning">Undo Last Action</button>
         </form>
     </div>
-</div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Which Batsman is on Strike</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          Confirm No/Wide Ball
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Confirm</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
+    
     <!-- Additional Stats Section -->
     <div class="row mt-4">
         <div class="col-md-4">
